# pythonproject-11

./: .env.example  README.md  config.py  main.py  pyproject.toml
src/: date_format.py  decorators.py  external_api.py  generators.py  import_file.py  main.py  masks.py  processing.py  search_on_string.py  utils.py  widget.py  widjet.py
tests/: conftest.py  mylog.txt  test_decorators.py  test_external.py  test_generators.py  test_import.py  test_masks.py  test_processing.py  test_report  test_search.py  test_utils.py  test_widget.py
